[gd_scene load_steps=12 format=3 uid="uid://cicpbily2jo3r"]

[ext_resource type="Script" uid="uid://bttn54ws25wlo" path="res://scripts/game/roles/BaseHero.gd" id="1_60nc3"]
[ext_resource type="Script" uid="uid://bhoea7wr3asos" path="res://scripts/game/Hurtbox.gd" id="2_rcd3b"]
[ext_resource type="Script" uid="uid://rd8oj5v71skj" path="res://scripts/game/Hitbox.gd" id="3_0x2mg"]
[ext_resource type="Script" uid="uid://dlt8ht6ajqcf7" path="res://scripts/game/roles/StateMachine/StateMachine.gd" id="4_rvfdc"]
[ext_resource type="Script" uid="uid://1lxgxuu7wi2j" path="res://scripts/game/roles/BaseHeroState/idle.gd" id="5_3rfxw"]
[ext_resource type="Script" uid="uid://bmowhl8g0xhch" path="res://scripts/game/roles/BaseHeroState/run.gd" id="6_jcofl"]
[ext_resource type="Script" uid="uid://p61fh76epprt" path="res://scripts/game/roles/BaseHeroState/jump_1.gd" id="7_h1xbn"]
[ext_resource type="Script" uid="uid://b4ebauugxpqn2" path="res://scripts/game/roles/BaseHeroState/jump_2.gd" id="8_gyjv8"]
[ext_resource type="Script" uid="uid://bgv884n380q1e" path="res://scripts/game/roles/BaseHeroState/fall.gd" id="9_dmtxo"]
[ext_resource type="Script" uid="uid://dotdqkqa5l28x" path="res://scripts/game/roles/BaseHeroState/Attack.gd" id="10_utvvp"]
[ext_resource type="Script" uid="uid://6ynmypggdaib" path="res://scripts/game/roles/skills/skill_actuator.gd" id="11_rcd3b"]

[node name="BaseHero" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_60nc3")

[node name="Graphics" type="Node2D" parent="."]

[node name="Role" type="Sprite2D" parent="Graphics"]
scale = Vector2(-1, 1)

[node name="Equipment" type="Sprite2D" parent="Graphics"]
scale = Vector2(-1, 1)

[node name="SpecialEffect" type="Sprite2D" parent="Graphics"]
scale = Vector2(-1, 1)

[node name="Hurtbox" type="Area2D" parent="Graphics"]
collision_layer = 8
collision_mask = 0
script = ExtResource("2_rcd3b")
metadata/_custom_type_script = "uid://bhoea7wr3asos"

[node name="HurtShape" type="CollisionShape2D" parent="Graphics/Hurtbox"]

[node name="HitBox" type="Node2D" parent="Graphics"]

[node name="Attack" type="Area2D" parent="Graphics/HitBox"]
collision_layer = 0
collision_mask = 16
script = ExtResource("3_0x2mg")
metadata/_custom_type_script = "uid://rd8oj5v71skj"

[node name="AtkShape1" type="CollisionShape2D" parent="Graphics/HitBox/Attack"]

[node name="AtkShape2" type="CollisionShape2D" parent="Graphics/HitBox/Attack"]

[node name="AtkShape3" type="CollisionShape2D" parent="Graphics/HitBox/Attack"]

[node name="AtkShape4" type="CollisionShape2D" parent="Graphics/HitBox/Attack"]

[node name="BodyShape" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_rvfdc")
metadata/_custom_type_script = "uid://dlt8ht6ajqcf7"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_3rfxw")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("6_jcofl")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="Jump1" type="Node" parent="StateMachine"]
script = ExtResource("7_h1xbn")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="Jump2" type="Node" parent="StateMachine"]
script = ExtResource("8_gyjv8")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("9_dmtxo")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("10_utvvp")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="SkillActuator" type="Node" parent="."]
script = ExtResource("11_rcd3b")
metadata/_custom_type_script = "uid://6ynmypggdaib"
